[gd_scene load_steps=15 format=2]

[ext_resource path="res://fonts/Roboto/Roboto-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://icons/circle_half.svg" type="Texture" id=3]
[ext_resource path="res://icons/eye_opened.svg" type="Texture" id=4]
[ext_resource path="res://icons/move.svg" type="Texture" id=5]
[ext_resource path="res://icons/eye_closed.svg" type="Texture" id=6]
[ext_resource path="res://icons/restore.svg" type="Texture" id=7]
[ext_resource path="res://icons/unit-circle.svg" type="Texture" id=8]
[ext_resource path="res://icons/fullscreen.svg" type="Texture" id=9]
[ext_resource path="res://icons/fullscreen_exit.svg" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 1 )

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0.00436884, 90.0095, -0.00436884, -90.0095, -161, 0, -90.7404, -0.0021533, 90.7404, 0.0021533, -1, -168, 0.00139487, -90.013, -0.00139487, 90.013, 159, 0, 90.3233, 0.00833336, -90.3233, -0.00833336, -1, 168, -0.000640184, 90.0132, 0.000640184, -90.0132, -161, 0 )
}

[sub_resource type="DynamicFont" id=3]
size = 45
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 1 )

[node name="Node2D" type="Node2D"]
position = Vector2( 1, 0 )
script = ExtResource( 2 )

[node name="A_Controller_Text" type="Label" parent="."]
visible = false
margin_left = 960.0
margin_top = 20.0
margin_right = 1000.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 1 )
text = "A"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B_Controller_Text" type="Label" parent="."]
visible = false
margin_left = 336.0
margin_top = 976.0
margin_right = 380.0
margin_bottom = 1059.0
custom_fonts/font = SubResource( 1 )
text = "B"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="C_Controller_Text" type="Label" parent="."]
visible = false
margin_left = 1447.0
margin_top = 928.0
margin_right = 1493.0
margin_bottom = 1011.0
custom_fonts/font = SubResource( 1 )
text = "C"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B_Text_Director" type="Path2D" parent="."]
visible = false
curve = SubResource( 2 )

[node name="B_Text_Director_Follow" type="PathFollow2D" parent="B_Text_Director"]
position = Vector2( -161, 0 )
z_index = 2
rotate = false
cubic_interp = false

[node name="B_Text" type="Label" parent="B_Text_Director/B_Text_Director_Follow"]
custom_fonts/font = SubResource( 1 )
text = "--1--"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="C_Text_Director" type="Path2D" parent="."]
visible = false
scale = Vector2( 1.00177, 1 )
curve = SubResource( 2 )

[node name="C_Text_Director_Follow" type="PathFollow2D" parent="C_Text_Director"]
position = Vector2( -161, 0 )
z_index = 2
rotate = false
cubic_interp = false

[node name="C_Text" type="Label" parent="C_Text_Director/C_Text_Director_Follow"]
custom_fonts/font = SubResource( 1 )
text = "--1--"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="A_Hide_Text" type="Label" parent="."]
margin_left = 30.0
margin_top = 30.0
margin_right = 151.0
margin_bottom = 83.0
custom_fonts/font = SubResource( 3 )
text = "B-A-C"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="A_Hide" type="TextureButton" parent="."]
margin_left = 160.0
margin_top = 30.0
margin_right = 220.0
margin_bottom = 90.0
mouse_default_cursor_shape = 2
toggle_mode = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restore_Button" type="TextureButton" parent="."]
margin_left = 1740.0
margin_top = 30.0
margin_right = 1807.0
margin_bottom = 90.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullScreen_Button" type="TextureButton" parent="."]
margin_left = 1830.0
margin_top = 30.0
margin_right = 1890.0
margin_bottom = 90.0
mouse_default_cursor_shape = 2
toggle_mode = true
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Unite_Circle" type="Node2D" parent="."]
position = Vector2( 960, 540 )

[node name="Circle" type="Sprite" parent="Unite_Circle"]
texture = ExtResource( 8 )

[node name="C_Controller" type="Button" parent="Unite_Circle"]
margin_left = 24.0084
margin_top = -189.163
margin_right = 121.008
margin_bottom = -98.1633
rect_pivot_offset = Vector2( 48, 45 )
focus_mode = 0
mouse_default_cursor_shape = 13
shortcut_in_tooltip = false
icon = ExtResource( 5 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="A_B_C" type="Line2D" parent="Unite_Circle"]
z_index = 2
points = PoolVector2Array( 268.018, -147.439, 0, 0, 270, 0, 268.768, -147.205 )
width = 5.0
default_color = Color( 0, 0.901961, 0.941176, 1 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="A_Text_Director" type="Path2D" parent="Unite_Circle"]
scale = Vector2( 0.6, 0.6 )
curve = SubResource( 2 )

[node name="A_Text_Director_Follow" type="PathFollow2D" parent="Unite_Circle/A_Text_Director"]
position = Vector2( -161, 0 )
z_index = 2
rotate = false
cubic_interp = false

[node name="A_Text" type="Label" parent="Unite_Circle/A_Text_Director/A_Text_Director_Follow"]
margin_left = -84.8469
margin_top = -60.0
margin_right = 83.1531
margin_bottom = 58.0
custom_fonts/font = SubResource( 1 )
text = "--1--"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="A_Circle" type="Sprite" parent="Unite_Circle"]
scale = Vector2( 0.504201, 0.504201 )
z_index = -2
texture = ExtResource( 3 )

[node name="Cutter" type="Polygon2D" parent="Unite_Circle"]
z_index = -1
color = Color( 0, 0, 0, 1 )
invert_enable = true
invert_border = 500.0
polygon = PoolVector2Array( 958.536, 200, 511, 960, 1408, 960 )

[node name="Cos" type="Label" parent="Unite_Circle"]
margin_left = 108.0
margin_top = 15.0
margin_right = 174.0
margin_bottom = 63.0
custom_fonts/font = SubResource( 4 )
text = "0.01m"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sin" type="Label" parent="Unite_Circle"]
margin_left = 285.192
margin_top = -90.8394
margin_right = 397.192
margin_bottom = -42.8394
custom_fonts/font = SubResource( 4 )
text = "0.01m"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
